[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "pytest-cov>=6.0.0", "ruff>=0.10.0"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["B", "I"]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "D401", # First line of docstring should be in imperative mood
    "D104", # Missing docstring in public package
    "D203", # One blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Allow assertions in tests
    "PLR2004", # Allow magic numbers in test comparisons
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src"
